--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시판서비스</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+    <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAADElEQVQI12P4//8/AAX+Av7czFnnAAAAAElFTkSuQmCC">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+    <link rel="shortcut icon" href="#" />
+    <link rel="icon" href="data:,">
+    <link rel="icon" href="data:;base64,=">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous"></script>
 </head>
 <body class="body">
@@ -86,7 +92,7 @@
                             </div>
                             <div class="description">
                                 <div class="info">
-                                    <span th:text="'구독자 ' + ${chan.subscribeDtos.size()}+'명'">구독자 명</span>
+                                    <span th:text="'구독자 ' + ${chan.subCount}+'명'">구독자 명</span>
                                     <span class="sep"></span>
                                     <span class="user-info">
                                     <span th:text="'관리자 ' + ${chan.channelManagerDtos[0].user.nickname}">관리자&nbsp;
@@ -123,7 +129,7 @@
                             </div>
                             <div class="description">
                                 <div class="info">
-                                    <span th:text="'구독자 ' + ${chan.subscribeDtos.size()}+'명'">구독자 명</span>
+                                    <span th:text="'구독자 ' + ${chan.subCount}+'명'">구독자 명</span>
                                     <span class="sep"></span>
                                     <span class="user-info">
                                         <span th:text="'관리자 ' + ${chan.channelManagerDtos[0].user.nickname}">관리자&nbsp;
@@ -149,18 +155,6 @@
                 </div>
             </footer>
         </div>
-        <ul class="nav-control">
-            <li>
-            <a href="#top" id="goTopBtn" title="맨위로 이동">
-                <ion-icon name="caret-up-outline"></ion-icon>
-            </a>
-            </li>
-            <li>
-            <a href="#bottom" id="goBottomBtn" title="맨아래로 이동">
-                <ion-icon name="caret-down-outline"></ion-icon>
-            </a>
-            </li>
-        </ul>
     </div>
 
 
@@ -171,7 +165,7 @@
         for(let i =0; i<chanList.length; i++){
             for(let j = 0; j<subList.length; j++){
                 if(chanList[i].dataset.channels == subList[j].dataset.sublist){
-                    chanList[i].classList.toggle('active');
+                    chanList[i].classList.add('active');
                 }
             }
         }
