--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -40,35 +40,34 @@
                 <div class="d-table-cell align-middle">
 
                     <div class="text-center mt-4">
-                        <h1 class="h2">Get started</h1>
+                        <h1 class="h2">회원 가입</h1>
                         <p class="lead">
-                            Start creating the best possible user experience for you customers.
+
                         </p>
                     </div>
 
                     <div class="card">
                         <div class="card-body">
                             <div class="m-sm-4">
-                                <form>
+                                <form method="post" action="/signup">
                                     <div class="form-group">
-                                        <label>Name</label>
-                                        <input class="form-control form-control-lg" type="text" name="name" placeholder="Enter your name">
+                                        <label>아이디</label>
+                                        <input class="form-control form-control-lg" type="text" name="userId" placeholder="아이디를 입력해주세요">
                                     </div>
                                     <div class="form-group">
-                                        <label>Company</label>
-                                        <input class="form-control form-control-lg" type="text" name="company" placeholder="Enter your company name">
+                                        <label>비밀번호</label>
+                                        <input class="form-control form-control-lg" type="password" name="password" placeholder="비밀번호를 입력해주세요">
                                     </div>
                                     <div class="form-group">
                                         <label>Email</label>
-                                        <input class="form-control form-control-lg" type="email" name="email" placeholder="Enter your email">
+                                        <input class="form-control form-control-lg" type="email" name="email" placeholder="이메일을 입력해주세요">
                                     </div>
                                     <div class="form-group">
-                                        <label>Password</label>
-                                        <input class="form-control form-control-lg" type="password" name="password" placeholder="Enter password">
+                                        <label>닉네임</label>
+                                        <input class="form-control form-control-lg" type="text" name="nickname" placeholder="닉네임을 입력해주세요">
                                     </div>
                                     <div class="text-center mt-3">
-                                        <a href="index.html" class="btn btn-lg btn-primary">Sign up</a>
-                                        <!-- <button type="submit" class="btn btn-lg btn-primary">Sign up</button> -->
+                                         <button type="submit" class="btn btn-lg btn-primary">가입</button>
                                     </div>
                                 </form>
                             </div>
