--- a/src/main/resources/templates/readPost.html
+++ b/src/main/resources/templates/readPost.html
@@ -154,6 +154,13 @@
                                     </button>
                                 </form>
                             </div>
+                            <div class="btn-group-sm">
+                                <form action="" id="deletePostForm" method="post">
+                                    <a href="" class="article-btn" id="btnModify">수정</a>
+                                    <span class="sep"></span>
+                                    <button type="submit" class="article-btn">삭제</button>
+                                </form>
+                            </div>
                         </div>
                         <div class="article-comment position-relative" id="comment">
                             <div class="title">
