뷰단 세부사항 변동
게시글 페이지에서도 게시글목록 보이도록 변경
게시글페이지에서 보이는 게시글목록의 현 게시글은 배경색 추가

--- a/src/main/resources/templates/channelMain.th.xml
+++ b/src/main/resources/templates/channelMain.th.xml
@@ -47,7 +47,7 @@
                     <attr sel="span" th:data-filter="${post.userDto.nickname}" th:text="${post.userDto.nickname}"/>
                 </attr>
                 <attr sel=".col-time">
-                    <attr sel="time" th:datetime="${post.createdDate}" data-format="Q" th:text="${#temporals.format(post.createdDate, 'yy/MM/dd HH:mm')}" />
+                    <attr sel="time" th:datetime="${post.createdDate}" data-format="Q" th:text="${#temporals.format(post.createdDate, 'yy/MM/dd HH:mm:ss')}" />
                 </attr>
                 <attr sel=".col-view" th:text="${post.hit}"/>
                 <attr sel=".col-rate" th:text="${post.rating}"/>
