--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -42,7 +42,7 @@
         </li>
       </ul>
 
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" hidden>
         <input type="search" class="form-control form-control-dark text-bg-white" placeholder="Search..." aria-label="Search">
       </form>
 
