--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,7 +64,7 @@
         <div class="content-wrapper clearfix">
             <article class="container-md board-article">
                 <div class="form-group">
-                    <input type="text" name="" id="keyword" class="form-control" placeholder="채널 찾기..." autocomplete="off">
+                    <input type="text" name="channelName" id="keyword" class="form-control" placeholder="채널 찾기..." autocomplete="off">
                 </div>
                 
                 <div class="board-list">
