--- a/src/main/resources/templates/readPost.th.xml
+++ b/src/main/resources/templates/readPost.th.xml
@@ -15,7 +15,7 @@
                     <attr sel="span" th:title="${chanInfo.channelName}+' 채널'" th:text="${chanInfo.channelName}+' 채널'"/>
                 </attr>
                 <attr sel=".buttons">
-                    <attr sel=".subscribe-btn" th:href="@{'/'+${chanInfo.slug}+'/subscribe'}" th:data-chan="${chanInfo.channelName}" />
+                    <attr sel=".subscribe-btn" th:href="@{'/'+${chanInfo.slug}+'/subscribe'}" th:data-chan="${chanInfo.channelName}" th:class="'btn btn-sm subscribe-btn' + (${subCheck} ? ' active' : '')"/>
                 </attr>
             </attr>
             <attr sel=".description">
@@ -100,4 +100,53 @@
         </attr>
     </attr>
 
+
+    <attr sel="div.article-list">
+        <attr sel="div.list-table">
+            <attr sel="a" th:href="@{${fromList.id}(page=${posts.number})}" th:class="'vrow column' + (${fromList.id == post.id} ?' table-secondary':'')" th:each="fromList :${posts}">
+                <attr sel=".col-id" th:text="${fromList.id}"/>
+                <attr sel=".col-title">
+                    <attr sel=".title" th:text="${fromList.title}"/>
+                </attr>
+                <attr sel=".col-author">
+                    <attr sel="span" th:data-filter="${fromList.userDto.nickname}" th:text="${fromList.userDto.nickname}"/>
+                </attr>
+                <attr sel=".col-time">
+                    <attr sel="time" th:datetime="${fromList.createdDate}" data-format="Q" th:text="${#temporals.format(fromList.createdDate, 'yy/MM/dd HH:mm:ss')}" />
+                </attr>
+                <attr sel=".col-view" th:text="${fromList.hit}"/>
+                <attr sel=".col-rate" th:text="${fromList.rating}"/>
+            </attr>
+        </attr>
+    </attr>
+
+    <attr sel="form.form-inline.search-form.justify-content-end" th:action="@{'/'+${chanInfo.slug}}" th:method="'get'">
+        <attr sel="#search-type" th:replace="all-but-first">
+            <attr sel="option[0]" th:each="type : ${target}" th:value="${type.name}" th:selected="${(param.target != null && (param.target.toString == type.name)) || (param.target == null && typeStat.index == 0)}"  th:text="${type.description}" />
+        </attr>
+    </attr>
+
+    <attr sel="div.btns-board">
+        <attr sel="div.float-right">
+            <attr sel="a.btn-arca-article-write" th:href="@{'/'+${chanInfo.slug}+'/write'}"/>
+        </attr>
+        <attr sel="div.float-left">
+            <attr sel="a.float-left" th:href="@{'/'+${chanInfo.slug}}"/>
+
+        </attr>
+    </attr>
+
+    <attr sel="#search-type" th:remove="all-but-first">
+        <attr sel="option[0]" th:each="searchType : ${target}" th:value="${searchType.name}" th:selected="${param.searchType != null && (param.searchType.toString == searchType.name)}" th:text="${searchType.description}"/>
+    </attr>
+
+    <attr sel=".pagination-wrapper">
+        <attr sel=".pagination">
+            <attr sel="li[0]/a" th:class="'page-link' + (${posts.number <=0} ?' disabled':'')" th:text="'<'" th:href="@{'/'+${chanInfo.slug}(page=${posts.number -1},sort=${param.sort},target=${param.target},keyword=${param.keyword})}"/>
+            <attr sel="li[1]" th:class="'page-item' + (${pageNumber} == ${posts.number}?' active':'')" th:each="pageNumber : ${pageNumbers}">
+                <attr sel="a" th:text="${pageNumber + 1}" th:class="'page-link' + (${pageNumber} == ${posts.number}?' active':'')" th:href="@{'/'+${chanInfo.slug}(page=${pageNumber},sort=${param.sort},target=${param.target},keyword=${param.keyword})}"/>
+            </attr>
+            <attr sel="li[2]/a" th:text="'>'" th:class="'page-link' + (${posts.number} >= ${posts.totalPages - 1}?' disabled':'')" th:href="@{'/'+${chanInfo.slug}(page=${posts.number +1},sort=${param.sort},target=${param.target},keyword=${param.keyword})}"/>
+        </attr>
+    </attr>
 </thlogic>
