인덱스페이지 채널 검색 기능 추가
키워드를 받아 키워드를 포함한 슬러그 및 이름을 가진 채널 검색

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,9 +63,9 @@
           </header>
         <div class="content-wrapper clearfix">
             <article class="container-md board-article">
-                <div class="form-group">
-                    <input type="text" name="channelName" id="keyword" class="form-control" placeholder="채널 찾기..." autocomplete="off">
-                </div>
+                <form method="get" class="form-group" th:action="@{'/search'(keyword=${param.keyword})}">
+                    <input type="text" name="keyword" id="keyword" class="form-control" placeholder="채널 찾기..." autocomplete="off">
+                </form>
                 
                 <div class="board-list">
                     <div class="board-item board-search" th:each="chan : ${chanList}" th:if="${#authorization.expression('isAuthenticated()')}">
