--- a/src/main/resources/templates/readPost.html
+++ b/src/main/resources/templates/readPost.html
@@ -185,11 +185,11 @@
                                                 </div>
                                             </div>
 
-                                            <div class="message">
+                                            <form class="message">
                                                 <div class="text">
                                                     <pre>내용</pre>
                                                 </div>
-                                            </div>
+                                            </form>
                                         </div>
                                     </div>
                                     <form action="" class="reply-form"></form>
