--- a/src/main/resources/templates/replyForm.th.xml
+++ b/src/main/resources/templates/replyForm.th.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <thlogic>
-    <attr sel=".reply-form" th:action="@{${post.id + '/comment/' + comment.commentId}}">
-        <attr sel="input[name='parentId']" th:value="${comment.commentId}"/>
+    <attr sel=".reply-form" th:action="@{${post.id + '/comment/' + comment.id}}">
+        <attr sel="input[name='parentId']" th:value="${comment.id}"/>
         <attr sel=".reply-form__user-info">
             <attr sel="#replyWriter" th:value="${userInfo.nickname}" th:disabled="'disabled'" />
         </attr>
