댓글 세부사항, 게시글 검색 쿼리 수정
댓글 수정/삭제 추가. 게시글 검색 쿼리 @Query 사용해 수정

--- a/src/main/resources/static/css/article.css
+++ b/src/main/resources/static/css/article.css
@@ -452,3 +452,6 @@ button:not(:disabled), [type=button]:not(:disabled), [type=reset]:not(:disabled)
         margin-left: 0.75rem;
     }
 }
+.modal-content .reply-form {
+    margin: 0;
+}
