--- a/src/main/resources/templates/readPost.html
+++ b/src/main/resources/templates/readPost.html
@@ -348,35 +348,62 @@
                 </div>
             </footer>
         </div>
-        <ul class="nav-control">
-            <li>
-            <a href="#top" id="goTopBtn" title="맨위로 이동">
-                <ion-icon name="caret-up-outline"></ion-icon>
-            </a>
-            </li>
-            <li>
-            <a href="#bottom" id="goBottomBtn" title="맨아래로 이동">
-                <ion-icon name="caret-down-outline"></ion-icon>
-            </a>
-            </li>
-        </ul>
     </div>
 
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">댓글 수정</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form action="" class="reply-form" method="post">
+                <div class="modal-body">
 
+                        <div class="reply-form-textarea-wrapper">
+                            <textarea name="content" maxlength="8000" required="required" tabindex="108" class="reply-form-textarea" style="width:100%;height: 99.5px;outline: none;resize: none;"></textarea>
+                        </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                    <button type="submit" class="btn btn-primary">수정</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 <div id="bottom"></div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-<script>
+<script th:inline="javascript">
+    /*<![CDATA[*/
     $(function() {
         $(".reply-link").on("click", function (){
             $(this).closest(".comment-wrapper").children(".reply-form").css({
                 display: 'block',
             });
-        })
+        });
+
+        $(".comment-item .btn-group-sm button[type='submit'].article-btn").on("click", function (){
+            event.preventDefault();
+            if(confirm("이 댓글을 삭제하시겠습니까?")) this.closest("form").submit();
+        });
+
+        const slug = /*[[${chanInfo.slug}]]*/;
+        const postId = /*[[${post.id}]]*/;
+
+
+        $(".comment-item .btn-group-sm button[type='button']").on("click", function (){
+            console.log(this.dataset.cid);
+            $(".modal-content form.reply-form").attr("action", "/"+slug+"/post/"+postId+"/comment/"+this.dataset.cid+"/update");
+        });
     })
+    /*]]>*/
 </script>
 </body>
 </html>
